(style): alignments issue

--- a/src/scss/components/_battle-stats.scss
+++ b/src/scss/components/_battle-stats.scss
@@ -62,6 +62,7 @@
     width: auto;
     background: none;
     font-size: 12px;
+    left: 0;
     .add-pokemon {
       bottom: -10rem;
     }
