--- a/src/scss/components/_pokemon_card_grid.scss
+++ b/src/scss/components/_pokemon_card_grid.scss
@@ -89,6 +89,7 @@
     .pokemon-card-grid {
       display: flex;
       flex-direction: column;
+      align-items: center;
       margin: 0 !important;
       padding: 4rem !important;
     }
